--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.VirtualTextures=True
 r.VirtualTexturedLightmaps=True
+r.Substrate=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
